--- a/index.html
+++ b/index.html
@@ -116,6 +116,49 @@
                         <span class="receita-autor-nome">Thiago Alves</span>
                     </div>
                 </div>
+                <div class="receitas-card">
+                    <header class="receitas-card-header">
+                        <div class="receitas-card-header-details"> 
+                            <span class="destaque amarelo">Em alta</span>
+                            <h3 class="receita-title">Cappuccino</h3>
+                        </div>
+                        <p class="receita-avaliacao">Extraordinário . 4/4</p>
+                    </header>
+                    <p class="receita-descricao">Uma bebida ideal</p>
+                    <div class="receita-autor">
+                        <img src="" alt="">
+                        <span class="receita-autor-nome">Thiago Alves</span>
+                    </div>
+                </div>
+                <div class="receitas-card">
+                    <header class="receitas-card-header">
+                        <div class="receitas-card-header-details"> 
+                            <span class="destaque amarelo">Em alta</span>
+                            <h3 class="receita-title">Cappuccino</h3>
+                        </div>
+                        <p class="receita-avaliacao">Extraordinário . 4/4</p>
+                    </header>
+                    <p class="receita-descricao">Uma bebida ideal</p>
+                    <div class="receita-autor">
+                        <img src="" alt="">
+                        <span class="receita-autor-nome">Thiago Alves</span>
+                    </div>
+                </div>
+                <div class="receitas-card">
+                    <header class="receitas-card-header">
+                        <div class="receitas-card-header-details"> 
+                            <span class="destaque amarelo">Em alta</span>
+                            <h3 class="receita-title">Cappuccino</h3>
+                        </div>
+                        <p class="receita-avaliacao">Extraordinário . 4/4</p>
+                    </header>
+                    <p class="receita-descricao">Uma bebida ideal</p>
+                    <div class="receita-autor">
+                        <img src="" alt="">
+                        <span class="receita-autor-nome">Thiago Alves</span>
+                    </div>
+                </div>
+                 
             </div>
         </section>
     </main>
